add center; padronizando frases; add icon desaparecidos

--- a/cadastro/cadastro.html
+++ b/cadastro/cadastro.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Cadastro de Cliente</title>
+<link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
 </head>
 
 <body>
