--- a/cursos/cursos.html
+++ b/cursos/cursos.html
@@ -8,13 +8,15 @@
 <meta charset="utf-8">
 
 <title>Grade Cursos Senac</title>
+<link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
+
 
 </head>
 
 
 <body>
 
-<h1>Cursos IFRO - Informática para Escritório</h1>
+<h1><center>Cursos IFRO - Informática para Escritório</center></h1>
 
 <table Border = 2>
    <tr>
