--- a/desaparecidos/desaparecidos.html
+++ b/desaparecidos/desaparecidos.html
@@ -4,20 +4,22 @@
 <head>
 <meta charset="utf-8">
 <title>Mural de Cães</title>
+<link rel="shortcut icon" href="../imagens/lost.png">
 </head>
 
 <body>
 
-<h1>Mural - Encontre aqui cães desaparecidos</h1>
+<h1><center>Mural</center> </h1>
+<h2><center>Cães desaparecidos aqui</center></h2>
 
 <h2>BEAGLE, desapareceu de casa a 2 dias, Por favor ajudem. Ele precisa de medicamentos contínuos ele é Cardíaco. Desapareceu prox. Metrô Paulista. Atende pelo nome de Toby.... Entrar em contato com 7777-7777 - Rose </h2>
-<img src="beagle.JPG"> 
+<img src="../imagens/Beagle.JPG"> 
 
 <h2> BULL- Cachorro encontrado na Lapa - SP, muito dócil, estava muito assustado. Contato com Fábio - 8888-9999 </h2>
-<img src="bullterrier.JPG"> 
+<img src="../imagens/bullterrier.JPG"> 
 
 <h2> COLLIE- Perdi um cão dia 28 na rua Julia Rica as 17:00h, ele esta na minha família ha 4 onze anos. Obrigado ! Contato com Luis - 7788-9999 </h2><img src="Collie.JPG"> 
-
+<img src="../imagens/Collie.jpg"> 
 <H1>Atendimento: atendimento@desaparecidos.com - (0XX) 99999-9999 / (0XX) 88888-8888</H1>
 
 </body>
