--- a/pagina_inicial/index.html
+++ b/pagina_inicial/index.html
@@ -2,36 +2,29 @@
 
 <html lang="pt-br">
 
-
 <head>
 
 <meta charset="utf-8">
 
-<title>Menu Exercício</title>
+<title>Site</title>
+<link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
 
 </head>
 
 
 <body>
 
-<h1>Menu Exercícios</h1>
-
-
+<h1><center>Menus</center></h1>
 
 <ul>
+<li><a target="_blank" href="../curriculo/curriculo.html"> Clique aqui</a> para ver meu Currículo.</li>
 
+<li><a target="_blank" href="../desaparecidos/desaparecidos.html">Clique aqui</a> para ver o Mural de Cães desaparecidos.</li>
 
-<li><a href="../curriculo/curriculo.html">Currículo</a></li>
+<li><a target="_blank" href="../cursos/cursos.html">Clique aqui</a> para ver a Grade de Cursos do Senac.</li>
 
-<li><a href="../desaparecidos/desaparecidos.html">Mural de cães</a></li>
-
-<li><a href="../cursos/cursos.html">Cursos</a></li>
-
-<li><a href="../cadastro/cadastro.html">Cadastro</a></li>
+<li><a target="_blank" href="../cadastro/cadastro.html">Clique aqui</a> para ir para tela de Cadastro.</li>
 </ul>
-
-
-
 
 
 </body>
