--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -3,6 +3,7 @@
 <head>   
 	<meta charset="utf-8" />
 	<title>Curriculum</title>
+	<link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
 </head>
 <body>
 
