--- a/curriculo/curriculo.html
+++ b/curriculo/curriculo.html
@@ -1,74 +1,145 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>   
-	<meta charset="utf-8" />
-	<title>Curriculum</title>
-	<link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
+    <meta charset="utf-8">
+    <title>Currículo - DS HTML</title>
+    <link rel="shortcut icon" href="../imagens/huntshowdownIcon.png">
+    <link rel="stylesheet" href="../estilo.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f8f8;
+            margin: 0;
+        }
+
+        header, footer {
+            background-color: #004080;
+            color: white;
+            text-align: center;
+            padding: 15px;
+        }
+
+        nav {
+            background-color: #ddd;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            margin: 0 15px;
+            text-decoration: none;
+            color: #004080;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        main {
+            padding: 30px;
+            max-width: 900px;
+            margin: 0 auto;
+            background-color: white;
+            border-radius: 10px;
+            border: 2px solid #004080;
+        }
+
+        h1, h2, h3 {
+            color: #004080;
+        }
+		header h1 {
+    	color: white;
+		}
+
+        hr {
+            margin: 20px 0;
+        }
+
+        ul, ol, dl, p {
+            margin-bottom: 20px;	
+        }
+
+        footer {
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
 
-<ul>
-	<li> [Endereço]</li>
-	<li> [Cidade, Estado e Cep] </li>
-	<li> [Telefone]</li>
-	<li> [Email]</li>
-</ul> 
+<header>
+    <h1>Currículo Profissional</h1>
+</header>
 
-<p>
-<h1>[Seu nome]</h1>
-<hr>
-</p>
-<p>
-<h2>OBJETIVO: </h2> Trabalhar em uma empresa conceituada, Libero egestas aliquam amet, purus donec aliquet fringilla, aenean sagittis. 
-</p>
-<hr>
+<nav>
+    <a href="../pagina_inicial/index.html">Home</a>
+    <a href="../cadastro/cadastro.html">Cadastro</a>
+    <a href="curriculo.html">Currículo</a>
+    <a href="../cursos/cursos.html">Cursos</a>
+    <a href="../desaparecidos/desaparecidos.html">Desaparecidos</a>
+</nav>
 
-<dl>
-<dt> <h3>HABILIDADES & COMPETÊNCIAS </h3> </dt>
-<dd> Flexibilidade - Aliquet sodales volutpat interdum aliquam nibh, elit gravida tincidunt rutrum.</dd>
-<dd> Capacidade para resolver problemas - Adipiscing ornare nec eleifend potenti sem, molestie eget class nisi.</dd>
-<dd> Trabalho em equipe - Ut lacus ut imperdiet in gravida, justo auctor ut adipiscing. </dd>
-<dd> Esforçado - Nam sociosqu conubia donec taciti platea, condimentum sem augue gravida. </dd>
-<dd> Proativo - Tempor per augue facilisis ornare fringilla, donec nec volutpat ornare. </dd>
-<dd> Altamente qualificado - Mollis imperdiet eget eu feugiat suscipit, suspendisse semper inceptos metus. </dd>
-<dd> Comunicativo - Scelerisque ut dictum curae vehicula mi, faucibus consectetur tristique erat.</dd>
-</dl>
-<hr>
+<main>
+	<h1>Celso Hector Silva Sales</h1>
+    <hr>
+    <ul>
+        <li>[Endereço]</li>
+        <li>[Cidade, Estado e Cep]</li>
+        <li>[Telefone]</li>
+        <li>hector.c@estudante.ifro.edu.br</li>
+    </ul>
 
-<h3>EXPERIÊNCIA	</h3>
-<ul>
-<li>[CARGO, NOME DA EMPRESA] [Datas De - Até] </li>
-<li>[CARGO, NOME DA EMPRESA] [Datas De - Até] </li>
-<li>[CARGO, NOME DA EMPRESA] [Datas De - Até] </li>
-<li>[CARGO, NOME DA EMPRESA] [Datas De - Até] </li>
-</ul>
-<hr>
-<h3>EDUCAÇÃO </h3>
-<ul>
-<li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
-<li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
-<li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
-</ul>
 
-<p>
-<hr>
-<h3>COMUNICAÇÃO </h3>
-Ante nec libero facilisis aliquam ultrices fringilla inceptos, tempus tristique sollicitudin nostra consequat cubilia, convallis libero varius sapien nisi lorem. 
-</p>
-<hr>
-<p>
-<h3>REFERÊNCIAS </h3>
-</p>
-<ol>
-<li> [NOME DE REFERÊNCIA, Cargo, Empresa, contato] </li>
-<li> [NOME DE REFERÊNCIA, Cargo, Empresa, contato] </li>
-<li> [NOME DE REFERÊNCIA, Cargo, Empresa, contato] </li>
-<li> [NOME DE REFERÊNCIA, Cargo, Empresa, contato] </li>
-</ol>
+    <h2>OBJETIVO</h2>
+    <p>Trabalhar em uma empresa conceituada. Libero egestas aliquam amet, purus donec aliquet fringilla, aenean sagittis.</p>
+    <hr>
+
+    <h3>HABILIDADES & COMPETÊNCIAS</h3>
+    <dl>
+        <dd>Flexibilidade - Aliquet sodales volutpat interdum aliquam nibh, elit gravida tincidunt rutrum.</dd>
+        <dd>Capacidade para resolver problemas - Adipiscing ornare nec eleifend potenti sem, molestie eget class nisi.</dd>
+        <dd>Trabalho em equipe - Ut lacus ut imperdiet in gravida, justo auctor ut adipiscing.</dd>
+        <dd>Esforçado - Nam sociosqu conubia donec taciti platea, condimentum sem augue gravida.</dd>
+        <dd>Proativo - Tempor per augue facilisis ornare fringilla, donec nec volutpat ornare.</dd>
+        <dd>Altamente qualificado - Mollis imperdiet eget eu feugiat suscipit, suspendisse semper inceptos metus.</dd>
+        <dd>Comunicativo - Scelerisque ut dictum curae vehicula mi, faucibus consectetur tristique erat.</dd>
+    </dl>
+    <hr>
+
+    <h3>EXPERIÊNCIA</h3>
+    <ul>
+        <li>[CARGO, NOME DA EMPRESA] [Datas De - Até]</li>
+        <li>[CARGO, NOME DA EMPRESA] [Datas De - Até]</li>
+        <li>[CARGO, NOME DA EMPRESA] [Datas De - Até]</li>
+        <li>[CARGO, NOME DA EMPRESA] [Datas De - Até]</li>
+    </ul>
+    <hr>
+
+    <h3>EDUCAÇÃO</h3>
+    <ul>
+        <li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
+        <li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
+        <li>[NOME DA INSTITUIÇÃO—LOCAL—GRADUAÇÃO]</li>
+    </ul>
+    <hr>
+
+    <h3>COMUNICAÇÃO</h3>
+    <p>Ante nec libero facilisis aliquam ultrices fringilla inceptos, tempus tristique sollicitudin nostra consequat cubilia, convallis libero varius sapien nisi lorem.</p>
+    <hr>
+
+    <h3>REFERÊNCIAS</h3>
+    <ol>
+        <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
+        <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
+        <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
+        <li>[NOME DE REFERÊNCIA, Cargo, Empresa, contato]</li>
+    </ol>
+
+</main>
+
+<footer>
+    <p>&copy; 2025 Currículo de Celso Hector - Todos os direitos reservados</p>
+</footer>
 
 </body>
-</ html>
-
-
-
-
+</html>
